opam-version: "1.2"
name: "redis-protocol"
version: "0.1.0"
maintainer:   "Sergey Grebenshchikov <sgreben@gmail.com>"
author:       "Sergey Grebenshchikov <sgreben@gmail.com>"
homepage:     "https://github.com/sgreben/ocaml-redis-protocol"
bug-reports:  "https://github.com/sgreben/ocaml-redis-protocol/issues"
license:      "ISC"
dev-repo:     "https://github.com/sgreben/ocaml-redis-protocol.git"
build: ["dune" "build"]
install: ["dune" "install"]
available: [ ocaml-version >= "4.06.0" ]
